# Pacman_advanced_v

./: .gitignore  MANIFEST.in  Pacman.spec  README.md  map.txt  map2.txt  pacman_chasing.py  pyproject.toml  requirements.txt
pacman_game/: __init__.py  __main__.py  game.py  map.txt  map2.txt
